# radical-odoo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .repomixignore  Dockerfile  README.md  docker-compose.yml  justfile  odoo-modules.txt  pyproject.toml  repomix.config.json  requirements.in  requirements.txt
.github/workflows/: ci.yml
addons/account_invoice_digitize_ai/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  UPSTREAM.md  __manifest__.py  ruff.toml
addons/account_invoice_digitize_ai/data/: data.xml
addons/account_invoice_digitize_ai/i18n/: fr.po
addons/account_invoice_digitize_ai/models/: __init__.py  account_move.py  ai_anomaly_detector.py  ai_auto_apply.py  ai_aws_sigv4.py  ai_cron_processor.py  ai_document.py  ai_document_builder.py  ai_document_qualifier.py  ai_duplicate_detector.py  ai_extraction_engine.py  ai_extraction_log.py  ai_facturx_parser.py  ai_field_mapper.py  ai_fiscal_cache_invalidator.py  ai_fiscal_context.py  ai_line_builder.py  ai_matcher.py  ai_matcher_account.py  ai_matcher_partner.py  ai_matcher_po.py  ai_matcher_tax.py  ai_preprocess_pipeline.py  ai_preprocessor.py  ai_preprocessor_aws.py  ai_preprocessor_azure.py  ai_preprocessor_normalize.py  ai_prompt.py  ai_provider.py  ai_provider_anthropic.py  ai_provider_deepseek.py  ai_provider_google.py  (+10 more)
addons/money/: __manifest__.py
docs/: migrate.md  nl-eenmanszaak-vat-workflow.md
scripts/: check-nl-tax-readiness.sh  update-modules.sh  update-odoo-modules.sh  upgrade-db.sh  validate-image-addons.py
(+74 files in other folders)
