[build-system]
requires = [
    "hatchling",
    "hatch-odoo",
]
build-backend = "hatchling.build"

[project]
name = "radical-odoo-deployment"
version = "19.0.1.0.0"
description = "Radical Data Odoo deployment project"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.odoo-addons-dependencies]

[tool.hatch.build.hooks.odoo-addons-dirs]

[tool.hatch-odoo]
odoo_version_override = "19.0"
addons_dirs = [
    "addons",
]
dependencies = [
    "factur-x",
    "pdfplumber",
    "pyzbar",
]
